# embercore-client-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/modules/: Boost.cmake  EnTT.cmake  Lua.cmake  Protobuf.cmake  Protocol.cmake  SFML.cmake  SFMLSharedTargets.cmake  Sol2.cmake  TrueEngineBuildHelper.cmake  TrueEngineDependencies.cmake  TrueEngineDllCopy.cmake  cxxopts.cmake  nlohmann_json.cmake  spdlog.cmake  yaml-cpp.cmake
scripts/: BuildPrepare.sh  LuaBuild.cmake
src/TE/: CMakeLists.txt
src/TE/Core/: AppTraits.cpp  AppTraits.h  Application.cpp  Application.h  Input.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  TrueEngine.cpp  TrueEngine.h  VideoSettings.cpp  VideoSettings.h  VideoSettingsManager.cpp  VideoSettingsManager.h  main.cpp
src/TE/Core/Logger/: Logger.h
src/TE/Core/Memory/: AbstractAllocator.h  MemoryManager.h  ObjectPool.h
src/TE/Core/Resource/: AbstractBuilder.h  ResourceManager.cpp  ResourceManager.h  TextureBuilder.cpp  TextureBuilder.h
src/TE/filesystem/: FileData.h  Filesystem.cpp  Filesystem.h  Filesystem.inl  FilesystemRawReader.cpp  FilesystemRawReader.h  FilesystemStaticCache.cpp  FilesystemStaticCache.h  IFilesystemCache.h  IFilesystemReader.h  IFilesystemWriter.h
src/TE/input/: Input.cpp  Input.h
src/TE/logger/: Logger.h
src/TE/resource/: BaseBuilder.h  ResourceManager.cpp  ResourceManager.h  TextureBuilder.cpp  TextureBuilder.h
src/TE/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/TE/util/: Singleton.h  YamlParser.cpp  YamlParser.h  YamlParser.inl
src/te/: CMakeLists.txt
src/te/core/: Application.cpp  Application.h  TrueEngine.cpp  TrueEngine.h
src/te/ecs/: EcsManager.cpp  EcsManager.h
src/te/filesystem/: FileData.h  Filesystem.cpp  Filesystem.h  FilesystemReaderImpl.cpp  FilesystemReaderImpl.h  FilesystemWriterImpl.cpp  FilesystemWriterImpl.h
src/te/graphics/: VideoSettings.cpp  VideoSettings.h  Window.cpp  Window.h
src/te/input/: Input.cpp  Input.h
src/te/module/: ModuleManager.cpp  ModuleManager.h
src/te/network/: Network.cpp  Network.h
src/te/resource/: BaseBuilder.h  ResourceManager.cpp  ResourceManager.h  TextureBuilder.cpp  TextureBuilder.h
src/te/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/te/script/: ScriptManager.cpp  ScriptManager.h
src/te/util/: Log.cpp  Log.h  Log.inl  Singleton.h  Singleton.inl  Utility.cpp  Utility.h  Utility.inl
